# ecommerce-app

./: .envrc  .eslintrc.cjs  .gitattributes  .gitignore  AGENTS.md  DEMO.md  README.md  compose.yml  debug_app.py  demo-text.md  justfile  list_routes.py  package-lock.json  package.json  settings.json  test_currency_api.py
backend/: AGENTS.md  CURRENCY_IMPLEMENTATION.md  Dockerfile  Dockerfile.dev  README.md  alembic.ini  config.py  errors.py  logging_config.py  main.py  products.json  pyproject.toml  pytest.ini  store.db
backend/alembic/: env.py
backend/alembic/versions/: 13088b0b391d_initial_migration.py  3cb25bcfc1a0_add_cart_popularity_tracking.py  43dd358e66cb_add_featured_field_to_products.py  50f63877083c_add_fx_rates_table.py  58ca8b703106_add_featured_field_to_products.py  92c7686c770a_add_multi_currency_support_and_orders.py  94404b2e4890_add_delivery_options_and_product_.py  a6dd944bcd50_add_featured_flag_to_products.py  afa3d22d6ef1_add_featured_field_to_products.py  edf1d3831f5d_add_product_cart_counts_table.py  f976da1f5b43_add_featured_and_sales_count_to_products.py
backend/app/: __init__.py  background_tasks.py  crud.py  currency.py  currency_dependencies.py  currency_service.py  currency_utils.py  db.py  error_handling.py  errors.py  logging_config.py  logging_setup.py  main.py  middleware.py  models.py  money.py  schemas.py  seed.py  settings.py
backend/app/errors/: __init__.py  codes.py  (+3 more)
backend/middleware/: trace.py
backend/tests/: conftest.py  currency_factories.py  factories.py  test_currency_basic.py  test_error_handling.py  test_money.py
(+153 files in other folders)
