[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.116.2",
    "httpx>=0.28.1",
    "mypy>=1.18.1",
    "pillow>=11.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "ruff>=0.13.0",
    "sqlmodel>=0.0.24",
    "structlog>=25.1.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "types-requests>=2.32.4.20250913",
]
